@@ -1,3 +1,9 @@
+2010-05-13  Chris Toshok  <toshok@ximian.com>
+
+	* value.cpp (Value::Copy): implement for MANAGED by creating a new
+	gchandle for the target.
+	(Value::FreeValue): implement for MANAGED by freeing the gchandle.
+
 2010-05-13  Jeffrey Stedfast  <fejj@novell.com>
 
 	* pal/gtk/install-dialog.cpp (install_xap): Install the unzipped
